# toucca

./: .gitignore  App.xaml  App.xaml.cs  Cargo.toml  FlyweightPool.cs  Logger.cs  MainWindow.xaml  MainWindow.xaml.cs  MercuryHelper.cs  README.md  README.zh.md  SerialManager.cs  rustfmt.toml  toucca.csproj  toucca.sln
.github/workflows/: build.yml  dotnet-desktop.yml
Properties/PublishProfiles/: FolderProfile.pubxml
src/: config.rs  hook.rs  lib.rs  pointer.rs  utils.rs
src/serial/: mod.rs
src/touch/: local.rs  mod.rs  websocket.rs
toucca/: Cargo.toml
toucca-bin/: Cargo.toml
toucca-bin/src/: constant.rs  main.rs  pack.rs  privileged.rs
toucca-dll/: Cargo.toml
toucca-dll/src/: lib.rs  log.rs
toucca-lib/: Cargo.toml
toucca-lib/src/: config.rs  lib.rs  window.rs
toucca-lib/src/serial/: mod.rs  pack.rs
toucca/src/: config.rs  lib.rs  log.rs
web/: controller.css  controller.js  index.html
